[package]
name = "rust_chm_wrapper"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["lib", "staticlib"] # staticlib allows linking from other C/C++ if needed

[dependencies]
cxx = "1.0"

[build-dependencies]
cxx-build = "1.0"

[dev-dependencies]
criterion = { version = "0.5", features = ["html_reports"] }
rand = "0.8" # For generating random keys in benchmark

[[bench]]
name = "map_benchmark"
harness = false # Required by criterion
